# yafl

./: .gitignore  CMakeLists.txt  README.md  TODO.md  a.out  notes.txt
compiler/: -  .gitignore  CLAUDE.md  CMakeLists.txt  TODO.md  build.gradle.kts  compiler.py  langtools.py  libraries.py  main.py  parselib.py  parser.py  readme.md  requirements.txt  review-notes.md  settings.gradle.kts  test_compiler.py  test_newfeatures.py  test_optimizer.py  test_parser.py  test_tokenizer.py  test_traits.py  tokenizer.py
compiler/.claude/: settings.json
compiler/.claude/agents/: yafl-fixer.md  yafl-pick-and-fix.md  yafl-reviewer.md
compiler/codegen/: gen.py  ops.py  param.py  perfecthash.py  test_gen.py  test_perfecthash.py  test_things.py  test_typedecl.py  things.py  tools.py  typedecl.py
compiler/lowering/: ast_inline.py  async_lower.py  block_exits.py  boxing.py  branch_threading.py  complex_enums.py  constants.py  copy_propagation.py  cost_model.py  cps.py  deadstores.py  generics.py  globalfuncs.py  globalinit.py  inlining.py  integers.py  lambdas.py  lazy_thunks.py  linearity.py  lower_lazy_lets.py  parallelize_tuples.py  simple_classes.py  sroa.py  ssa_validate.py  staticinit.py  strings.py  sync_inference.py  tail_loop.py  tail_trampoline.py  task_abi.py  trim.py  uninit_check.py  unions.py
compiler/parsing/: parselib.py  parser.py  tokenizer.py
compiler/pyast/: classtools.py  coerce.py  expression.py  match.py  resolver.py  statement.py  test_utils.py  typespec.py  union_repr.py  utils.py
compiler/pyast/expression/: __init__.py  access.py  base.py  block.py  box.py  builtin_op.py  call.py  lambda_expr.py  literal.py  loop.py  new.py  parallel.py  ternary.py  tuple_expr.py
compiler/samples/: json.yafl  static_init_demo.yafl  test  test.c  test2.yafl
compiler/src/: yafl.g4
compiler/src/main/java/: yafl.interp  yafl.tokens  yaflBaseListener.java  yaflBaseVisitor.java  yaflLexer.interp  yaflLexer.java  yaflListener.java  yaflParser.java  yaflVisitor.java
compiler/src/main/kotlin/: main.kt
compiler/src/main/kotlin/converter/: Converter.kt
compiler/src/main/kotlin/generator/: FunctionBuilder.kt  Generator.kt  Operation.kt  Register.kt
compiler/src/main/kotlin/graph/: Graph.kt
compiler/src/main/kotlin/imf/: BinaryOpType.kt  Flag.kt  Function.kt  Imf.kt  Operation.kt  Primitive.kt  Structure.kt  Transformers.kt  Type.kt
compiler/src/main/kotlin/model/: Model.kt
compiler/src/main/kotlin/util/: Graph.kt  Tools.kt
compiler/src/main/kotlin/validator/: Validator.kt
compiler/src/main/kotlin/yafl/: Api.kt
compiler/src/main/resources/: example.yafl  head.c  tail.c  test.yafl
compiler/src/main/resources/examples/: complex.yafl  data.yafl  enum.yafl  list_comprehension.yafl  random.yafl  sequences.yafl  static_type_information.yafl  structs.yafl  thoughts.txt  (+4 more)
compiler/src/test/kotlin/: ParserGeneratorTest.kt
compiler/src/test/resources/: 01_hello_world.yafl  02_call_function.yafl  03_call_extern_func.yafl  10_external_interface.yafl
compiler/stdlib/: args.yafl  array.yafl  console.yafl  dict.yafl  float.yafl  format.yafl  fs.yafl  integer.yafl  io.yafl  json.yafl  list.yafl  process.yafl  set.yafl  stream.yafl  string.yafl  traits.yafl
compiler/tests/: test_args.py  test_arithmetic.py  test_array_class.py  test_arrays.py  test_attributes.py  test_bitwise_operators.py  test_chain.py  test_char_literals.py  test_clean_compile.py  test_comparison_operators.py  test_comparisons.py  test_compiler.py  test_conditionals.py  test_conditionals_runtime.py  test_conversions.py  test_cost_model.py  test_dict_ops.py  test_early_return_inline.py  test_enum_types.py  test_findstr.py  test_float32.py  test_format.py  test_format_show.py  test_fs.py  test_gen.py  test_generic_arg_inference.py  test_generic_enum_concrete_match.py  test_generic_match_binder.py  test_generic_nesting.py  test_generic_trait_instance.py  test_global_init_operators.py  test_hash.py  test_index_operator.py  test_inline_always.py  test_inline_single_caller.py  test_int32.py  test_int_widths.py  test_io.py  test_io_copy.py  test_io_readline.py  (+58 more)
examples/: CMakeLists.txt  findstr.yafl  helloWorld.yafl  json_pretty.yafl  linenumbers.yafl  yspell.yafl
yaflc1/: .fiber.s.swp  .gitignore  .main.s.swp  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  blitz.c  blitz.h  blitz.s  cmake_install.cmake  context.c  context.h  context.s  fiber.c  fiber.h  fiber.s  heap.c  heap.h  main.c  main.s  object.c  object.h  queue.c  queue.h  queue.s
yaflcc/: Ast.cpp  Ast.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Expression.cpp  Expression.h  GrammarParser.cpp  GrammarParser.h  Printer.cpp  Printer.h  Token.cpp  Token.h  TokenParser.cpp  TokenParser.h  Tools.h  Type.cpp  Type.h  TypeResolver.cpp  TypeResolver.h  Verifier.cpp  Verifier.h  main.cpp
yaflcc/samples/: 01_hello_world.yafl  01_hello_world2.yafl  02_hello_world2.yafl  add.yafl  constraints.yafl  system.yafl
yafllib/: .gitignore  CMakeLists.txt  CMakePresets.json  common.h  float.c  hash.c  integer.c  io.c  io_internal.h  io_thread.c  lazy.c  libyafl.so.stale  main.c  mmap.c  object.c  parallel.c  primitive.c  stackguard.c  string.c  task.c  thread.c  thread_review.md  todo.txt  yafl.c  yafl.h
yafllib/tests/: test_framework.h  test_gc.c  test_gc_fwd_chain.c  test_gc_gen.c  test_gc_min.c  test_gc_min2.c  test_gc_pressure.c  test_gc_ring.c  test_gc_step.c  test_gc_step2.c  test_gc_stress.c  test_gc_thrash.c  test_integer.c  test_io.c  test_io_stress.c  test_large_objects.c  test_mmap.c  test_parallel.c  test_string.c  test_task.c
yaflr/: CMakeLists.txt  readme.md  todo.txt  yaflr.kdev4
yaflr/src/: blitz.h  fiber.c  fiber.h  integer.c  integer.h  library.h  lists.c  lists.h  mmap.c  mmap.h  object.c  object.h  platform.c  platform.h  settings.h  string.c  string.h  threads.h
yaflr/test/: test.c  test_fiber_parallel.c  test_integer.c  test_lists.c  test_mmap_alloc.c  test_mmap_protect.c  test_object_arrays.c  test_object_create.c  test_object_heap_compact.c  test_object_nested_heap.c  test_object_virtual_function.c  test_string.c
(+375 files in other folders)
